# goose-run

./: .gitignore  CLAUDE.md  index.html  package.json  tsconfig.app.json  vite.config.ts  vite.config.utools.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  file_io.rs  mod.rs  screenshot.rs  storage.rs
src/components/: AiAnalysisPanel.tsx  AiTab.tsx  ChargeFill.tsx  DetailEmpty.tsx  EmptyState.tsx  Header.tsx  LogPane.tsx  LogText.tsx  ParamPanel.tsx  ScriptCard.tsx  ScriptDetail.tsx  ScriptForm.tsx  ScriptList.tsx  SettingsAI.tsx  SettingsPanel.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  card.tsx  checkbox.tsx  collapsible.tsx  combobox.tsx  context-menu.tsx  dialog.tsx  direction.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  hover-card.tsx  input-group.tsx  input.tsx  item.tsx  kbd.tsx  label.tsx  menubar.tsx  native-select.tsx  navigation-menu.tsx  popover.tsx  select.tsx  (+16 more)
src/hooks/: use-ai-chat.ts  use-ai-launch.ts  use-long-press.ts
src/lib/: logger.ts  params.ts  port-detect.ts  script-import.ts  search.ts  types.ts
src/platform/: context.tsx  types.ts  utools.ts  web.ts
src/stores/: useAI.ts  useAiThread.ts  useRuns.ts  useScripts.ts  useSettings.ts
utools/: plugin.json  preload.cjs
utools/scripts/: build.js
(+11 files in other folders)
