[package]
name = "goose-2fa"
version = "0.1.0"
description = "本地化的双因素认证工具"
authors = ["Antigravity"]
edition = "2021"

[lib]
name = "goose_2fa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
arboard = { version = "3", features = ["image"] }
screenshots = "0.8"
image = "0.25"
base64 = "0.22"
